runners/recentdocuments: match term anywhere in file name

BUG: 461006